--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "github-username-regex": "^1.0.0",
+    "msw": "^0.42.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-multi-carousel": "^2.8.0",
